Steam Login is available and seperate from regular login. Must add the API key to login.js before using it.

--- a/LoginTesting/index.html
+++ b/LoginTesting/index.html
@@ -11,6 +11,7 @@
     </table>
     <p>Don't worry, you can trust me.</p>
     <p>Try logging in below!
+
     <form action="/login" method="post">
       <div>
           <label>Username:</label>
@@ -22,6 +23,12 @@
       </div>
       <div>
           <input type="submit" value="Log In"/>
+      </div>
+    </form>
+
+    <form action="/login-steam" method="post">
+      <div>
+          <br><input type="image" src="http://www.tf2wh.com/img/sits.png" name="image" width="153.6" height="67.2"><br>
       </div>
     </form>
 
