--- a/public/index.html
+++ b/public/index.html
@@ -1,66 +1,50 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<title>C4 - News</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=600px, initial-scale=1.0">
-		<link rel="stylesheet" href="//brick.a.ssl.fastly.net/Raleway:400,700">
-		<link rel="stylesheet" href="style.css">
+<!DOCTYPE HTML>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-	</head>
-	<body ng-app="myapp">
-		<!-- Menu -->
-		<div id="nav">
-			<div id="nav-content" class="page-center">
-				<a href="#" id="nav-brand">C4</a>
-				<div id="nav-left">
-					<a href="#">News</a>
-					<a href="#">Rankings</a>
-				</div>
-				<div id="nav-right">
-					<a href="#">Sign In</a>
-					<a href="#">Register</a>
-				</div>
-			</div>
-		</div>
-		
-		<!-- Content -->
-		<div id="special">
-			<div id="special-content" class="page-center">
-				<div id="special-content-middle">
-					<div id="special-content-title">Rock &amp; Roll!</div>
-					<div id="special-content-text">Look how sweet this website looks, guys. Not very, but whatever. It doesn't matter right now, we'll get there eventually</div>
-				</div>
-			</div>
-		</div>
-		<div id="news" ng-controller="newsController">
-			<div class="news-article page-center" ng-repeat="article in articles">
-				<div class="news-article-icon" style="background:url('images/icons/c4.png')">
-					<!-- TODO: Gravatar? -->
-					
-				</div>
-				<div class="news-article-title">{{ article.title }} <em style="font-weight:400">({{ article.author }} on {{ article.created | date:'medium' }})</em></div>
-				<div class="news-article-content">{{ article.content }}</div>
-			</div>
-		</div>
-
-		<!-- Scripts -->
-		<script>
-			var app = angular.module('myapp',[]);
-			app.controller('newsController', function($scope, $http) {
-				$scope.articles = [];
-				$scope.isBusy = true;
-				$http.get("data/news")
-				.then(function(result) {
-					// Success
-					angular.copy(result.data, $scope.articles);
-				}, function() {
-					// Error
-					alert("Could not load news articles");
-				}).then(function() {
-					$scope.isBusy = false;
-				});
-			});
-		</script>
-	</body>
+  </head>
+  <body ng-app="myapp">
+    <div id="navigation"><a href="#" id="navigation-home">C4</a><a href="#"><i class="fa fa-home fa"></i>Home</a><a href="#"><i class="fa fa-bars fa"></i>Rankings</a></div>
+    <div id="login-navigation"><a id="login" href="#"><i class="fa fa-sign-in fa"></i>Login</a><a id="signup" href="#"><i class="fa fa-user-plus fa"></i>Signup</a></div>
+    <div id="content" ng-controller="newsController">
+      <div id="banner" data-0="background-position:0px 0px;" data-300="background-position:0px -150;">
+        <strong>Welcome to C4 eSports!</strong>
+        <span>Devoted to competitive eSports on campus!</span>
+      </div>
+      <article ng-repeat="article in articles">
+        <img class="article-icon" src="images/icons/explosion.png">
+        <div class="article-content">
+          <strong>{{ article.title }}</strong><br>
+          ({{ article.author }} on {{ article.created | date:'medium' }})<br>
+          <br>
+          {{ article.content }}
+        </div>
+      </article>
+    </div>
+    <div id="footer">Footer text goes here</div>
+    
+    <!-- Scripts -->
+    <script>
+      var app = angular.module('myapp',[]);
+      app.controller('newsController', function($scope, $http) {
+        $scope.articles = [];
+        $scope.isBusy = true;
+        $http.get("http://c4esports.com/data/news")
+        .then(function(result) {
+          // Success
+          angular.copy(result.data, $scope.articles);
+        }, function() {
+          // Error
+          alert("Could not load news articles");
+        }).then(function() {
+          $scope.isBusy = false;
+        });
+      });
+    </script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.29/skrollr.min.js"></script>
+    <script type="text/javascript">skrollr.init({forceHeight: false});</script>
+  </body>
 </html>
