--- a/public/index.html
+++ b/public/index.html
@@ -1,67 +1,30 @@
 <!DOCTYPE HTML>
-<html>
+<html ng-app="c4App">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>C4 eSports</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.3/angular.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.3/angular-route.min.js"></script>
+		<script src="app/app.js"></script>
   </head>
-  <body ng-app="myapp">
+  <body>
     <div id="skrollr-body">
-    	<div id="content" ng-controller="newsController">
-	      <div id="banner" data-0-start="background-position:0px 0px;" data-100-start="background-position:0px -150px;">
-	        <strong>Welcome to C4 eSports!</strong>
-	        <span>Devoted to competitive eSports on campus!</span>
-	      </div>
-	      <article ng-repeat="article in articles">
-	        <img class="article-icon" src="images/icons/explosion.png">
-	        <div class="article-content">
-	          <strong>{{ article.title }}</strong><br>
-	          ({{ article.author }} on {{ article.created | date:'medium' }})<br>
-	          <br>
-	          {{ article.content }}
-	        </div>
-	      </article>
+    	<div id="content">
+				<!-- Content renders here -->
+				<div ng-view></div>
 	    </div>
 	    
 	    <!-- TODO: Footer Text -->
 	    <!-- TODO: Privacy Statement -->
 	    <div id="footer">Footer text goes here</div>
 	  </div>
-   	<div id="navigation"><a href="#" id="navigation-home">C4</a><a href="#"><i class="fa fa-home fa"></i>Home</a><a href="#"><i class="fa fa-bars fa"></i>Rankings</a></div>
+   	<div id="navigation"><a href="#/" id="navigation-home">C4</a><a href="#"><i class="fa fa-home fa"></i>Home</a><a href="#/"><i class="fa fa-bars fa"></i>Rankings</a></div>
    	<div id="login-navigation"><a id="login" href="#"><i class="fa fa-sign-in fa"></i>Login</a><a id="signup" href="#"><i class="fa fa-user-plus fa"></i>Signup</a></div>
 	
 	  <!-- Scripts -->
-	  <script>
-    	// Angular news loader
-    	// TODO: Move to a seperate js
-      var app = angular.module('myapp',[]);
-      app.controller('newsController', function($scope, $http) {
-        $scope.articles = [];
-        $scope.isBusy = true;
-        $http.get("data/news")
-        .then(function(result) {
-          // Success
-          angular.copy(result.data, $scope.articles);
-        }, function() {
-          // Error
-          alert("Could not load news articles");
-        }).then(function() {
-          $scope.isBusy = false;
-          console.log(document.documentElement.clientWidth);
-          console.log(document.documentElement.clientHeight);
-        });
-      });
-
-		// Initialize Skrollr after the website loads
-    window.onload = function() {
-	    skrollr.init({
-    		forceHeight: false
-    	});
-    };
-    </script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js"></script>
   </body>
 </html>
