Daniel Login Local Working. Concept in Progress Polish to come

--- a/public/index.html
+++ b/public/index.html
@@ -25,14 +25,16 @@
 	        </div>
 	      </article>
 	    </div>
-	    
+
 	    <!-- TODO: Footer Text -->
 	    <!-- TODO: Privacy Statement -->
 	    <div id="footer">Footer text goes here</div>
 	  </div>
+
+    <!-- TODO: Check on Href paths -->
    	<div id="navigation"><a href="#" id="navigation-home">C4</a><a href="#"><i class="fa fa-home fa"></i>Home</a><a href="#"><i class="fa fa-bars fa"></i>Rankings</a></div>
-   	<div id="login-navigation"><a id="login" href="#"><i class="fa fa-sign-in fa"></i>Login</a><a id="signup" href="#"><i class="fa fa-user-plus fa"></i>Signup</a></div>
-	
+   	<div id="login-navigation"><a id="login" href="login.html"><i class="fa fa-sign-in fa"></i>Login</a><a id="signup" href="#"><i class="fa fa-user-plus fa"></i>Signup</a></div>
+
 	  <!-- Scripts -->
 	  <script>
     	// Angular news loader
