Started to route users and login

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,8 @@
       <a href="#/"><i class="fa fa-bars fa"></i>Rankings</a>
     </div>
     <div id="login-navigation">
-      <a href="#" id="login"><i class="fa fa-sign-in fa"></i>Login</a>
+      <!--Use href paths for now - Dan -->
+      <a href="login\login.html" id="login"><i class="fa fa-sign-in fa"></i>Login</a>
       <a href="#" id="signup"><i class="fa fa-user-plus fa"></i>Signup</a>
     </div>
 
