--- a/public/index.html
+++ b/public/index.html
@@ -24,15 +24,18 @@
       <a href="#/"><i class="fa fa-bars fa"></i>Rankings</a>
     </div>
     <div id="login-navigation">
-      <a href="#" id="login"><i class="fa fa-sign-in fa"></i>Login</a>
-      <a href="#" id="signup"><i class="fa fa-user-plus fa"></i>Signup</a>
+      <a href="https://c4esports.com/#/login" id="login"><i class="fa fa-sign-in fa"></i>Login</a>
+      <a href="https://c4esports.com/#/signup" id="signup"><i class="fa fa-user-plus fa"></i>Signup</a>
     </div>
 
-    <!-- Scripts -->
+    <!-- External Scripts -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.3/angular.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.3/angular-route.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js"></script>
+    
+    <!-- C4 Scripts -->
     <script src="nav_app.js"></script>
     <script src="news/news.js"></script>
+    <script src="login/login.js"></script>
   </body>
 </html>
