Add navbar change in login
Signed-off-by: Tian Wang <wtianzhi@gmail.com>

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
       <!-- TODO: Privacy Statement -->
       <div id="footer">Footer text goes here</div>
     </div>
-    <div id="navigation" ng-controller="navController">
+    <div id="navigation" ng-controller="NavController">
       <a href="#/" id="navigation-home">C4</a>
       <a href="#/"><i class="fa fa-hom fa"></i>Home</a>
       <a href="#/"><i class="fa fa-bars fa"></i>Rankings</a>
