--- a/public/signup/signup.html
+++ b/public/signup/signup.html
@@ -5,10 +5,11 @@
 
 <!-- Signup -->
 <div>
-  <form method="post" action="https://c4esports.com/login/somewhere">
+  <form method="post" action="signup">
+    <p><input type="text" name="username" value="" placeholder="Username"></p>
     <p><input type="text" name="university_email" value="" placeholder="University Email"></p>
     <p><input type="text" name="preferred_email" value="" placeholder="Preferred Email"></p>
     <p><input type="password" name="password" value ="" placeholder="Password"></p>
-    <p><input type="submit" name="signup" value="Signup"></p>
+    <p><input type="submit" name="signup" value="signup"></p>
   </form>
 </div>
