Refactored the front-end to only use one angular app, same folder structure.

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   </head>
-  <body ng-app="navApp">
+  <body ng-app="c4App">
     <div id="skrollr-body">
       <div id="content">
         <!-- Content renders here -->
@@ -32,9 +32,9 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.3/angular.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.3/angular-route.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js"></script>
-    
+
     <!-- C4 Scripts -->
-    <script src="nav_app.js"></script>
+    <script src="c4app.js"></script>
     <script src="news/news.js"></script>
     <script src="login/login.js"></script>
   </body>
