FIxing merge conflicts

--- a/public/login/login.html
+++ b/public/login/login.html
@@ -18,7 +18,7 @@
           <input type="password" name="password" ng-model="user.password" placeholder="Password"/>
         </div>
         <div>
-          <input type="submit" value="Log In"/>
+          <input type="submit" ng-click="login(user)" value="Log In"/>
         </div>
       </form>
 
